src/components/screens/monitor/delegates/delegates.css
@import '../../../../app/mixins.css';

.delegateDetails {
  display: flex;
  flex-direction: row;
  align-items: center;

  & > div {
    display: flex;
    flex-direction: column;
    margin-left: 8px;

    & > .delegateName {
      @mixin headingSmall;

      margin-top: 0;
      margin-bottom: 10px;
      color: var(--color-maastricht-blue);
      font-family: var(--content-font);

      & > span {
        @mixin contentNormal;

        margin-left: 10px;
        color: black;
      }
    }

    & > .delegateAddress {
      @mixin contentNormal;

      margin: 0;
      color: var(--color-slate-gray);
    }
  }
}

.delegateWeight {
  padding-left: 0;
  padding-right: 0;

  & > span {
    display: inline-block;
  }
}

.content {
  padding: 0 !important;
}

.voteRow {
  align-items: flex-start;
}

.votesColumnTitle {
  justify-content: flex-start !important;
}

.votesColumn {
  display: inline-block;

  & .vote,
  & .unVote {
    display: inline-block;
    width: 100%;
    text-align: left;
    padding-bottom: var(--vertical-padding-l);
  }

  & .icon {
    display: inline-block;
    vertical-align: top;
    width: 20px;
  }

  & .vote {
    & .icon {
      color: var(--color-deep-green);
    }
  }

  & .delegatesList {
    display: inline-block;
    width: calc(100% - 20px);
    vertical-align: top;
    word-break: break-word;

    & span {
      display: inline;

      &:not(:last-child)::after {
        content: '•';
        display: inline-block;
        padding: 0 5px;
      }
    }
  }
}

.tableRow {
  & > span {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    display: block;
    padding-right: 8px;
    padding-left: 8px;

    & > .delegateColumn {
      display: flex;

      & > img {
        margin-right: 12px;
        visibility: hidden;
        opacity: 0;
        position: relative;
      }
    }
  }

  & > span:last-child {
    padding-left: 0px;
    padding-right: 0px;
  }

  & > .noEllipsis {
    text-overflow: initial;
  }

  &:hover {
    & > span > .delegateColumn > img {
      visibility: visible;
      opacity: 1;
    }
  }
}

@media (--large-viewport) {
  .statusTitle {
    padding-right: 0;
  }
}

.statusToolip {
  white-space: nowrap;
}

.statusIconsContainer {
  overflow: visible !important;
  display: flex !important;
  flex-direction: row;
  justify-content: flex-start !important;

  & > div:first-child {
    margin-left: calc(50% - 17px);
  }

  & > div:nth-child(2) {
    margin-left: 12px;
  }
}

.statusIcon {
  height: 17px;
}

.delegateHeader {
  padding-left: 45px;
}

.roundStateHeader {
  padding-left: 0;
}

.delegateStatus {
  @mixin contentSmall semi-bold;

  padding: 8px 10px;
  border-radius: 3px;
  line-height: 12px;
  letter-spacing: 0.2px;
  text-transform: capitalize;

  &.standby {
    color: var(--color-ink-blue);
    background-color: var(--color-active-tab);
  }

  &.banned {
    color: var(--color-red);
    background-color: var(--color-red-transparent);
  }

  &.punished {
    color: var(--color-maastricht-blue);
    background-color: var(--color-yellow-transparent);
  }

  &.non-eligible {
    color: var(--color-blue-gray);
    background-color: var(--color-blue-manatee-transparent);
  }
}

.eyeIcon {
  display: flex;
}

